--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   --sButton-alt: hsl(195, 95%, 30%);
   --sButton: hsl(195, 95%, 40%);
   --sText: whitesmoke;
-  --sBackground: #ffffff;
+  --sBackground: #e3e3e3;
   --sBackground-shade: rgb(133, 133, 133);
   --sBackground-alt: linear-gradient(90deg, hsl(0, 0%, 3%), hsl(0, 0%, 0%));
   --headerT: hsl(240, 100%, 20%);
